# Test_docker_github_action

./: .dockerignore  .gitignore  CMakeLists.txt
.github/workflows/: cmake-test.yml
docker/: Dockerfile.rocky  Dockerfile.rocky.simple  Dockerfile.ubuntu  Dockerfile.ubuntu.minimal
scripts/: quick-start.sh  rocky-test.sh  test-docker-fixed.sh  test-docker.sh  test-simple.sh
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  test_memory.sh  test_memory.sh.in  test_startup.sh  test_startup.sh.in
